Fix white gap on win10 in channels manager

--- a/data/channels-manager.css
+++ b/data/channels-manager.css
@@ -77,6 +77,7 @@ main {
     padding: 1em;
     border-right: 1px solid #282ebe;
     flex-grow: 1;
+    height: 1.2em;
 }
 
 .toolbar a:link, .tooblar a:hover, .toolbar a:active, .toolbar a:visited {
